--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@google/maps": "^0.5.5",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^4.16.4",
+    "mongoose": "^4.16.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
