--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@google/maps": "^0.5.5",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.22"
+    "mongoose": "^5.4.22",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
