--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
-    "main": "node server.js"
+    "dev": "nodemon server.js 8000",
+    "main": "node server.js 80"
   },
   "repository": {
     "type": "git",
